done with grid css style

--- a/index.html
+++ b/index.html
@@ -15,39 +15,39 @@
             <ul class="main-menu">
                 <div class="menu-element">
                     <img src="" alt="home" class="icon">
-                    <li>Home</li>
+                    <li><a href="">Home</a></li>
                 </div>
                 <div class="menu-element">
                     <img src="" alt="profile" class="icon">
-                    <li>Profile</li>
+                    <li><a href="">Profile</a></li>
                 </div>
                 <div class="menu-element">
                     <img src="" alt="messages" class="icon">
-                    <li>Messages</li>
+                    <li><a href="">Messages</a></li>
                 </div>
                 <div class="menu-element">
                     <img src="" alt="history" class="icon">
-                    <li>History</li>
+                    <li><a href="">History</a></li>
                 </div>
                 <div class="menu-element">
                     <img src="" alt="tasks" class="icon">
-                    <li>Tasks</li>
+                    <li><a href="">Tasks</a></li>
                 </div>
                 <div class="menu-element">
                     <img src="" alt="communities" class="icon">
-                    <li>Communities</li>
+                    <li><a href="">Communities</a></li>
                 </div>
                 <div class="menu-element">
                     <img src="" alt="settings" class="icon">
-                    <li>Settings</li>
+                    <li><a href="">Settings</a></li>
                 </div>
                 <div class="menu-element">
                     <img src="" alt="support" class="icon">
-                    <li>Support</li>
+                    <li><a href="">Support</a></li>
                 </div>
                 <div class="menu-element">
                     <img src="" alt="privacy" class="icon">
-                    <li>Privacy</li>
+                    <li><a href="">Privacy</a></li>
                 </div>
             </ul>
         </div>
@@ -73,19 +73,61 @@
         <div class="dashboard">
             <div class="title">Your Projects</div>
             <div class="title">Announcements</div>
-            <div class="card">
-                <div class="subtitle">Super Cool Project</div>
-                <div class="card-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt accusantium
-                    facilis explicabo atque nostrum optio? Quae possimus iste, non quisquam, dolore minima perferendis
-                    alias reiciendis odit sint iure officia esse?</div>
-                <div class="card-buttons"></div>
-            </div>
-            <div class="card">
-                <div class="subtitle">Less Cool Project</div>
-                <div class="card-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt accusantium
-                    facilis explicabo atque nostrum optio? Quae possimus iste, non quisquam, dolore minima perferendis
-                    alias reiciendis odit sint iure officia esse?</div>
-                <div class="card-buttons"></div>
+            <div class="card-container">
+                <div class="card">
+                    <div class="subtitle">Super Cool Project</div>
+                    <div class="card-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt
+                        accusantium
+                        facilis explicabo atque nostrum optio? Quae possimus iste, non quisquam, dolore minima
+                        perferendis
+                        alias reiciendis odit sint iure officia esse?</div>
+                    <div class="card-buttons"></div>
+                </div>
+                <div class="card">
+                    <div class="subtitle">Less Cool Project</div>
+                    <div class="card-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt
+                        accusantium
+                        facilis explicabo atque nostrum optio? Quae possimus iste, non quisquam, dolore minima
+                        perferendis
+                        alias reiciendis odit sint iure officia esse?</div>
+                    <div class="card-buttons"></div>
+                </div>
+                <div class="card">
+                    <div class="subtitle">Impossible App</div>
+                    <div class="card-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt
+                        accusantium
+                        facilis explicabo atque nostrum optio? Quae possimus iste, non quisquam, dolore minima
+                        perferendis
+                        alias reiciendis odit sint iure officia esse?</div>
+                    <div class="card-buttons"></div>
+                </div>
+                <div class="card">
+                    <div class="subtitle">Easy Peasy App</div>
+                    <div class="card-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt
+                        accusantium
+                        facilis explicabo atque nostrum optio? Quae possimus iste, non quisquam, dolore minima
+                        perferendis
+                        alias reiciendis odit sint iure officia esse?</div>
+                    <div class="card-buttons"></div>
+                </div>
+                <div class="card">
+                    <div class="subtitle">Ad Blocker</div>
+                    <div class="card-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt
+                        accusantium
+                        facilis explicabo atque nostrum optio? Quae possimus iste, non quisquam, dolore minima
+                        perferendis
+                        alias reiciendis odit sint iure officia esse?</div>
+                    <div class="card-buttons"></div>
+                </div>
+                <div class="card">
+                    <div class="subtitle">Money Maker</div>
+                    <div class="card-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt
+                        accusantium
+                        facilis explicabo atque nostrum optio? Quae possimus iste, non quisquam, dolore minima
+                        perferendis
+                        alias reiciendis odit sint iure officia esse?</div>
+                    <div class="card-buttons"></div>
+                </div>
             </div>
             <div class="announcement">
                 <div class="subtitle">Site Maintenance</div>
@@ -104,35 +146,8 @@
                     facilis explicabo atque nostrum optio? Quae possimus iste, non quisquam, dolore minima perferendis
                     alias reiciendis odit sint iure officia esse?</div>
             </div>
-            <div class="card">
-                <div class="subtitle">Impossible App</div>
-                <div class="card-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt accusantium
-                    facilis explicabo atque nostrum optio? Quae possimus iste, non quisquam, dolore minima perferendis
-                    alias reiciendis odit sint iure officia esse?</div>
-                <div class="card-buttons"></div>
-            </div>
-            <div class="card">
-                <div class="subtitle">Easy Peasy App</div>
-                <div class="card-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt accusantium
-                    facilis explicabo atque nostrum optio? Quae possimus iste, non quisquam, dolore minima perferendis
-                    alias reiciendis odit sint iure officia esse?</div>
-                <div class="card-buttons"></div>
-            </div>
+
             <div class="title">Trending</div>
-            <div class="card">
-                <div class="subtitle">Ad Blocker</div>
-                <div class="card-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt accusantium
-                    facilis explicabo atque nostrum optio? Quae possimus iste, non quisquam, dolore minima perferendis
-                    alias reiciendis odit sint iure officia esse?</div>
-                <div class="card-buttons"></div>
-            </div>
-            <div class="card">
-                <div class="subtitle">Money Maker</div>
-                <div class="card-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt accusantium
-                    facilis explicabo atque nostrum optio? Quae possimus iste, non quisquam, dolore minima perferendis
-                    alias reiciendis odit sint iure officia esse?</div>
-                <div class="card-buttons"></div>
-            </div>
             <div class="trending">
                 <div class="element">
                     <img src="" alt="" class="profile">
