--- a/index.html
+++ b/index.html
@@ -6,60 +6,67 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
     <div class="grid-container">
         <div class="sidebar">
-            <div class="logo"></div>
+            <div class="logo">
+                <img src="icons/dashboard.svg" alt="dashboard-icon">
+                Dashboard
+            </div>
             <ul class="main-menu">
                 <div class="menu-element">
-                    <img src="" alt="home" class="icon">
+                    <img src="icons/home.svg" alt="home" class="icon">
                     <li><a href="">Home</a></li>
                 </div>
                 <div class="menu-element">
-                    <img src="" alt="profile" class="icon">
+                    <img src="icons/face-man-profile.svg" alt="profile" class="icon">
                     <li><a href="">Profile</a></li>
                 </div>
                 <div class="menu-element">
-                    <img src="" alt="messages" class="icon">
+                    <img src="icons/message.svg" alt="messages" class="icon">
                     <li><a href="">Messages</a></li>
                 </div>
                 <div class="menu-element">
-                    <img src="" alt="history" class="icon">
+                    <img src="icons/history.svg" alt="history" class="icon">
                     <li><a href="">History</a></li>
                 </div>
                 <div class="menu-element">
-                    <img src="" alt="tasks" class="icon">
+                    <img src="icons/file-tree.svg" alt="tasks" class="icon">
                     <li><a href="">Tasks</a></li>
                 </div>
                 <div class="menu-element">
-                    <img src="" alt="communities" class="icon">
+                    <img src="icons/communities.svg" alt="communities" class="icon">
                     <li><a href="">Communities</a></li>
                 </div>
-                <div class="menu-element">
-                    <img src="" alt="settings" class="icon">
+                <div class="menu-element" id="element-group-1">
+                    <img src="icons/setting.svg" alt="settings" class="icon">
                     <li><a href="">Settings</a></li>
                 </div>
                 <div class="menu-element">
-                    <img src="" alt="support" class="icon">
+                    <img src="icons/face-agent.svg" alt="support" class="icon">
                     <li><a href="">Support</a></li>
                 </div>
                 <div class="menu-element">
-                    <img src="" alt="privacy" class="icon">
+                    <img src="icons/privacy.svg" alt="privacy" class="icon">
                     <li><a href="">Privacy</a></li>
                 </div>
             </ul>
         </div>
         <div class="searchbar">
-            <button class="search"></button>
+            <button class="search"><img src="icons/search.svg" alt="search"></button>
             <input type="text">
-            <button class="notifications"></button>
-            <button class="profile"></button>
+            <button class="notifications"><img src="icons/notification.svg" alt="notification"></button>
+            <button class="profile"><img src="icons/profile1.jpg" alt="profile 1"></button>
             <a id="name" href="">Morgan Oakley</a>
         </div>
         <div class="info">
-            <img src="" alt="profile-photo" class="icon">
+            <img src="icons/profile1.jpg" alt="profile-photo" class="profile">
             <div class="greet">
                 <div class="hi">Hi there,</div>
                 <div class="user">Morgan Oakley (@morgan)</div>
@@ -81,7 +88,9 @@
                         facilis explicabo atque nostrum optio? Quae possimus iste, non quisquam, dolore minima
                         perferendis
                         alias reiciendis odit sint iure officia esse?</div>
-                    <div class="card-buttons"></div>
+                    <div class="card-buttons"><img src="icons/star-plus-outline.svg" alt="star-plus"><img
+                            src="icons/eye-plus-outline.svg" alt="eye-plus"><img src="icons/merge.svg" alt="merge">
+                    </div>
                 </div>
                 <div class="card">
                     <div class="subtitle">Less Cool Project</div>
@@ -90,7 +99,8 @@
                         facilis explicabo atque nostrum optio? Quae possimus iste, non quisquam, dolore minima
                         perferendis
                         alias reiciendis odit sint iure officia esse?</div>
-                    <div class="card-buttons"></div>
+                    <div class="card-buttons"><img src="icons/star-plus-outline.svg" alt="star-plus"><img
+                            src="icons/eye-plus-outline.svg" alt="eye-plus"><img src="icons/merge.svg" alt=""></div>
                 </div>
                 <div class="card">
                     <div class="subtitle">Impossible App</div>
@@ -99,7 +109,8 @@
                         facilis explicabo atque nostrum optio? Quae possimus iste, non quisquam, dolore minima
                         perferendis
                         alias reiciendis odit sint iure officia esse?</div>
-                    <div class="card-buttons"></div>
+                    <div class="card-buttons"><img src="icons/star-plus-outline.svg" alt="star-plus"><img
+                            src="icons/eye-plus-outline.svg" alt="eye-plus"><img src="icons/merge.svg" alt=""></div>
                 </div>
                 <div class="card">
                     <div class="subtitle">Easy Peasy App</div>
@@ -108,7 +119,8 @@
                         facilis explicabo atque nostrum optio? Quae possimus iste, non quisquam, dolore minima
                         perferendis
                         alias reiciendis odit sint iure officia esse?</div>
-                    <div class="card-buttons"></div>
+                    <div class="card-buttons"><img src="icons/star-plus-outline.svg" alt="star-plus"><img
+                            src="icons/eye-plus-outline.svg" alt="eye-plus"><img src="icons/merge.svg" alt=""></div>
                 </div>
                 <div class="card">
                     <div class="subtitle">Ad Blocker</div>
@@ -117,7 +129,8 @@
                         facilis explicabo atque nostrum optio? Quae possimus iste, non quisquam, dolore minima
                         perferendis
                         alias reiciendis odit sint iure officia esse?</div>
-                    <div class="card-buttons"></div>
+                    <div class="card-buttons"><img src="icons/star-plus-outline.svg" alt="star-plus"><img
+                            src="icons/eye-plus-outline.svg" alt="eye-plus"><img src="icons/merge.svg" alt=""></div>
                 </div>
                 <div class="card">
                     <div class="subtitle">Money Maker</div>
@@ -126,52 +139,53 @@
                         facilis explicabo atque nostrum optio? Quae possimus iste, non quisquam, dolore minima
                         perferendis
                         alias reiciendis odit sint iure officia esse?</div>
-                    <div class="card-buttons"></div>
+                    <div class="card-buttons"><img src="icons/star-plus-outline.svg" alt="star-plus"><img
+                            src="icons/eye-plus-outline.svg" alt="eye-plus"><img src="icons/merge.svg" alt=""></div>
                 </div>
             </div>
             <div class="announcement">
-                <div class="subtitle">Site Maintenance</div>
-                <div class="announcement-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt
-                    accusantium
-                    facilis explicabo atque nostrum optio? Quae possimus iste, non quisquam, dolore minima perferendis
-                    alias reiciendis odit sint iure officia esse?</div>
-                <div class="subtitle">Community Share Day</div>
-                <div class="announcement-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt
-                    accusantium
-                    facilis explicabo atque nostrum optio? Quae possimus iste, non quisquam, dolore minima perferendis
-                    alias reiciendis odit sint iure officia esse?</div>
-                <div class="subtitle">Updated Privacy Policy</div>
-                <div class="announcement-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt
-                    accusantium
-                    facilis explicabo atque nostrum optio? Quae possimus iste, non quisquam, dolore minima perferendis
-                    alias reiciendis odit sint iure officia esse?</div>
+                <div>
+                    <div class="subtitle">Site Maintenance</div>
+                    <div class="announcement-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt
+                        accusantium.</div>
+                </div>
+                <div>
+                    <div class="subtitle">Community Share Day</div>
+                    <div class="announcement-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt
+                        accusantium facilis explica.</div>
+                </div>
+                <div>
+                    <div class="subtitle">Updated Privacy Policy</div>
+                    <div class="announcement-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt
+                        accusantium facilis explicabo atque nostrum optio?</div>
+                </div>
             </div>
 
             <div class="title">Trending</div>
             <div class="trending">
                 <div class="element">
-                    <img src="" alt="" class="profile">
+                    <img src="icons/profile2.jpeg" alt="profile-2" class="profile">
                     <div class="userInfo">
                         <div class="tag">@tegan</div>
                         <div class="userName">World Peace Builder</div>
                     </div>
                 </div>
                 <div class="element">
-                    <img src="" alt="" class="profile">
+                    <img src="icons/profile1.jpg" alt="profile-1" class="profile">
                     <div class="userInfo">
                         <div class="tag">@morgan</div>
                         <div class="userName">Super Cool Project</div>
                     </div>
                 </div>
                 <div class="element">
-                    <img src="" alt="" class="profile">
+                    <img src="icons/profile3.jpg" alt="profile-3" class="profile">
                     <div class="userInfo">
                         <div class="tag">@kendal</div>
                         <div class="userName">Life Changing App</div>
                     </div>
                 </div>
                 <div class="element">
-                    <img src="" alt="" class="profile">
+                    <img src="icons/profile4.jpeg" alt="profile-4" class="profile">
                     <div class="userInfo">
                         <div class="tag">@alex</div>
                         <div class="userName">No Traffic Maker</div>
